# quantumcoin-ui-

./: .editorconfig  .env.example  .env.local  .eslintrc.js  .gitattributes  .gitignore  .rust-toolchain.toml  AEONITH_GRADE_BACKEND.js  AGENT.md  App.tsx  CHANGELOG.md  CODEOWNERS  COMPREHENSIVE_AUDIT_REPORT.md  CONSENSUS_ENGINE_README.md  CONTRIBUTING.md  CRYPTOCURRENCY_LAUNCH_STATUS.md  Cargo.toml  Cargo.toml.old  DEPLOYMENT_PLATFORMS.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_TEST.md  DEPLOY_CHECKLIST.md  DEVELOPMENT_ENVIRONMENT_SETUP.bat  Dockerfile  EXCHANGE_READY_CHECKLIST.md  EXCHANGE_VERIFICATION.md  EXTREME_FINAL_AUDIT.md  FINAL_COMPLETION_REPORT.md  FINAL_MOBILE_NAVIGATION_AUDIT.md  FINAL_MODERNIZATION_COMPLETE.md  FINAL_PROJECT_AUDIT_INSANE.md  FRONTEND_BACKEND_INTEGRATION_STATUS.md  GENESIS_CONFIG.md  GITHUB_VERIFICATION_REPORT.md  GOVERNMENT_GRADE_VERIFICATION.md  HOWTO-REPRODUCE-BUILD.md  IMPROVEMENT_PLAN.md  LAUNCH_LIVE_MAINNET.bat  LICENSE  LOGO_REQUIREMENTS.md  (+134 more)
.devcontainer/: devcontainer.json  post-create.sh
.github/: branch_protection.yml
.github/codeql/: codeql-config.yml
.github/workflows/: bulletproof-ci.yml  bulletproof.yml  chaos.yml  ci-main.yml  ci-strict.yml  ci.yml  codeql.yml  extreme-testing.yml  integration.yml  perf.yml  performance.yml  production-ci.yml  release-v2.yml  release.yml  strict-truth.yml
__tests__/api/: btc-price.test.ts  health.test.ts
app/: layout.tsx  page.tsx
app/explorer/: page.tsx
app/learn/: page.tsx
app/releases/: page.tsx
app/wqc/: page.tsx
backend/: Cargo.toml  Dockerfile  index.js  package.json  server.js
backend/backend/: main.rs  package.json
backend/src/: ai_integration.rs  block.rs  blockchain.rs  main.rs  main_integrated.rs  real_node.rs  real_wallet.rs  revstop.rs  rpc.rs  transaction.rs  wallet.rs
backend/src/endpoints/: explorer.rs
config/: chain.toml  node.toml  qc-node.service
contracts/: QuantumCoin.sol
crates/ai-sentinel/: Cargo.toml
crates/ai-sentinel/src/: attack_detection.rs  lib.rs  main.rs  network_optimizer.rs  performance_tuner.rs  production_models.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: lib.rs
crates/genesis/: Cargo.toml  README.md
crates/genesis/src/: block.rs  builder.rs  config.rs  crypto.rs  lib.rs  merkle.rs  verification.rs
crates/node/: Cargo.toml
crates/node/examples/: consensus_demo.rs
crates/node/src/: block.rs  chain_spec_loader.rs  chainstate.rs  config.rs  consensus.rs  consensus_engine.rs  consensus_tests.rs  economics.rs  lib.rs  main.rs  mempool.rs  network.rs  p2p.rs  pow.rs  rpc.rs  storage.rs  sync.rs  target.rs  transaction.rs  validation.rs
crates/node/tests/: integration_consensus.rs
crates/p2p/: Cargo.toml
crates/p2p/src/: dos_protection.rs  gossip.rs  lib.rs  message_propagation.rs  network_health.rs  peer_scoring.rs  priority_queue.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
crates/validation/: Cargo.toml
crates/validation/src/: fee_validator.rs  format_validator.rs  lib.rs  signature_validator.rs  test_vectors.rs  transaction_validator.rs  utxo_validator.rs
crates/validation/tests/: asert.rs  revstop.rs  subsidy.rs
crates/wallet/: Cargo.toml
crates/wallet/src/: crypto.rs  keys.rs  lib.rs  revstop.rs  storage.rs  transaction.rs  wallet.rs
css/: style.css
deprecated/: README.md  mining_ready_node.js  perfect_implementation.js  simple_miner.js
deprecated/ai-sentinel/: Cargo.toml
docker/: Dockerfile.node  quantumcoin.conf
docs/: BLOCK_FORMAT.md  GENESIS_BLOCK_SPECIFICATION.md  GENESIS_CREATION_GUIDE.md  P2P_NETWORK_ARCHITECTURE.md
e2e/: api.spec.ts  health.spec.ts
examples/: p2p_network.rs
exchange-pack/: INTEGRATION_GUIDE.md  RPC.md  ops.md
exchange-pack/indexer/: docker-compose.yml
frontend/: index.html  script.js  style.css
github-release-assets/: SHA256SUMS.txt
js/: main.js
listing/: quantumcoin.chain.json
network/: message.rs  mod.rs
openapi/: openapi.yaml
ops/nginx/: nginx.conf
pages/: _app.tsx  dashboard.tsx  exchange.tsx  explorer.tsx  index.tsx  kyc.tsx  login.tsx  mining.tsx  register.tsx  wallet.tsx
pages/api/: btc-price.ts  credit-qtc.ts  exchange-status.ts  health.ts  verify-btc.ts
perf/: ai-load.js  ui-smoke.js
public/: explorer.js  index.html  kyc.css  kyc.html  mining.html  mining.js  register.js  server.js  standalone-server.js  style.css  wallet.js
release-artifacts/: SECURITY.md  SHA256SUMS.txt  chain_spec.toml
routes/: revstop.js  send.js  wallet.js
scripts/: build_and_upload_release.sh  build_release.sh  chaos-kill-one.sh  generate_genesis.bat  generate_genesis.sh  genesis_reproducible.rs  localnet.sh  smoke.sh  verify_genesis_reproduction.bat
services/ai-daemon/: Dockerfile  app.py  requirements.txt
services/explorer-api/: package.json  server.mjs  test.mjs
src/: .env  App.tsx  admin.rs  ai_learning.rs  api.rs  api.ts  api_handlers.rs  auth.rs  bitcoin_payment.rs  block.rs  block_monitor.rs  blockchain.rs  btc.rs  cli.rs  coingecko.rs  config.rs  config.ts  dashboard.css  dashboard.html  database.rs  economics.rs  explorer.rs  explorer_feature.rs  fast_processor.rs  genesis.rs  index.html  kyc.rs  main.rs  main_integrated.rs  main_real.rs  mempool.rs  merkle.rs  mining.rs  mock_database.rs  models.rs  monitoring.rs  navigation.tsx  network.rs  network_v2.rs  p2p.rs  (+24 more)
src/api/: auth.ts  client.ts  wallet.ts
src/backend/: api.rs
src/components/: ExplorerStats.tsx  HeroTiles.tsx  MineBlock.tsx  NavBar.tsx  RainBackground.tsx  RevStopToggle.tsx  WalletCard.tsx  WalletInfo.tsx
src/context/: AuthContext.tsx  RevStopContext.tsx
src/crypto/: wallet.ts
src/lib/: api.ts
src/network/: config.rs  discovery.rs  gossip.rs  (+12 more)
static/: index.html  wallet.html
stress-test/: Cargo.toml
stress-test/src/: adversarial_test.rs  ai_crush_test.rs  extreme_stress.rs  scalability_test.rs
styles/: globals.css
templates/: index.html.tera  signup.html  signup.html.tera  success.html.tera
tests/: integration_tests.rs  stress_tests.rs  system_health_tests.rs
ui/: .env.example  .eslintrc.json  next.config.js  package.json  tsconfig.json
(+25 files in other folders)
