[workspace]
members = ["crates/types", "crates/crypto", "crates/validation", "crates/node"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["QuantumCoin contributors"]
repository = "https://github.com/aeonith/quantumcoin-ui-"
version = "1.0.0"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"
sha2 = "0.10"
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.39", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[package]
name = "quantumcoin"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "qtc-address"
path = "src/bin/qtc-address.rs"

[dependencies]
hex.workspace = true
sha2.workspace = true
