[workspace]
members = ["crates/types", "crates/crypto", "crates/validation", "crates/node"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["QuantumCoin contributors"]
repository = "https://github.com/aeonith/quantumcoin-ui-"
version = "1.0.0"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"
sha2 = "0.10"
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.39", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[package]
name = "quantumcoin"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "qtc-address"
path = "src/bin/qtc-address.rs"

[dependencies]
hex.workspace = true
sha2.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum = "0.7"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls"] }
blake3 = "1.5"
rand = "0.8"
crc32fast = "1.4"
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"
argon2 = "0.5"
uuid = { version = "1.0", features = ["v4"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tower = "0.4"
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
