[package]
name        = "quantumcoin-backend"
version     = "0.1.0"
edition     = "2021"
authors     = ["Aeonith <aeonith@quantumcoincrypto.com>"]
license     = "MIT"
description = "QuantumCoin™ backend API"

[dependencies]
actix-web  = { version = "4", features = ["rustls"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tokio      = { version = "1", features = ["rt-multi-thread", "macros"] }
env_logger = "0.10"
log        = "0.4"
uuid       = { version = "1", features = ["v4"] }
once_cell  = "1.19"