[package]
name = "quantumcoin"
version = "2.0.0"
edition = "2021"
authors = ["Aeonith <aeonith@quantumcoincrypto.com>"]
description = "QuantumCoin™ Production Backend API"
license = "MIT"

[dependencies]
actix-web = "4.4.0"
actix-files = "0.6.2"
actix-cors = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21.0"
pqcrypto-dilithium = "0.3.3"
pqcrypto-traits = "0.3.5"
sha3 = "0.10"
blake3 = "1.5"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8.5"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync"] }
uuid = { version = "1", features = ["v4", "serde"] }
futures-util = "0.3"
once_cell = "1.18"
lazy_static = "1.4.0"
sha2 = "0.10"
anyhow = "1"
hex = "0.4"
argon2 = "0.5"
rand_core = "0.6"
jsonwebtoken = "9.2"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "postgres", "macros", "json", "migrate"] }
tokio-rustls = "0.24"
rustls = "0.21"
webpki-roots = "0.25"
bcrypt = "0.15"
aes-gcm = "0.10"
redis = { version = "0.24", features = ["tokio-comp"] }
rayon = "1.8"
crossbeam = "0.8"
otpauth = "0.5"
qrcode = "0.12"
reqwest = { version = "0.11", features = ["json"] }
num_cpus = "1.16"
rustls-pemfile = "1.0"
bincode = "1.3"
parking_lot = "0.12"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
config = "0.14"
dashmap = "5.5"