[package]
name = "quantumcoin-backend"
version = "2.0.0"
edition = "2021"
authors = ["Aeonith <aeonith@quantumcoincrypto.com>"]
description = "QuantumCoin™ Backend API with Rocket"
license = "MIT"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync", "io-util"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
ring = "0.17"
base64 = "0.21"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
redis = { version = "0.24", features = ["tokio-comp"] }
