[package]
name = "quantumcoin-stress-test"
version = "1.0.0"
edition = "2021"

[dependencies]
# Core QuantumCoin dependencies
quantumcoin-validation = { path = "../crates/validation" }
quantumcoin-p2p = { path = "../crates/p2p" }
quantumcoin-ai-sentinel = { path = "../crates/ai-sentinel" }

# Stress testing framework
tokio = { version = "1", features = ["full"] }
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
quickcheck = "1.0"
arbitrary = "1.3"

# Load testing and simulation
rayon = "1.8"
crossbeam = "0.8"

# Network simulation
tokio-test = "0.4"
tokio-util = { version = "0.7", features = ["net"] }

# Metrics and monitoring
sysinfo = "0.30"

# Random data generation
rand = "0.8.5"
rand_chacha = "0.3"
fake = "2.9"

# Error handling and logging
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Cryptography for adversarial testing
blake3 = "1.5"
sha2 = "0.10"
hex = "0.4"

# Network testing
reqwest = { version = "0.11", features = ["json"] }
hyper = "0.14"

[[bin]]
name = "extreme-stress-test"
path = "src/extreme_stress.rs"

[[bin]]
name = "scalability-test"
path = "src/scalability_test.rs"

[[bin]]
name = "adversarial-test"
path = "src/adversarial_test.rs"

[[bin]]
name = "ai-crush-test"
path = "src/ai_crush_test.rs"

[[bench]]
name = "performance_benchmarks"
harness = false

[[bench]]
name = "scalability_benchmarks"
harness = false

[[bench]]
name = "adversarial_benchmarks"
harness = false
