[package]
name = "quantumcoin-ai-sentinel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Machine Learning
nalgebra = { workspace = true }
ndarray = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }

# Database and caching
sqlx = { workspace = true, features = ["postgres", "chrono", "uuid"] }
redis = { workspace = true }

# Visualization and analysis
plotters = { workspace = true }
statistical = { workspace = true }

# Concurrency
parking_lot = { workspace = true }
crossbeam = { workspace = true }

# Utilities
uuid = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"
proptest = { workspace = true }

[[bin]]
name = "ai-sentinel"
path = "src/main.rs"

[[bench]]
name = "ml_performance"
harness = false
