[package]
name = "quantumcoin-ai-sentinel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Core dependencies
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tracing = "0.1"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Machine Learning
nalgebra = "0.32"
ndarray = "0.15"
candle-core = "0.4"
candle-nn = "0.4"

# Database and caching
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
redis = { version = "0.24", features = ["tokio-comp"] }

# Concurrency
parking_lot = "0.12"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
hex = "0.4"

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"
proptest = { workspace = true }

[[bin]]
name = "ai-sentinel"
path = "src/main.rs"

[[bench]]
name = "ml_performance"
harness = false
