[package]
name = "qc-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
qc-types = { path = "../types" }
pqcrypto-dilithium = "0.5"
sha2 = { workspace = true }
ripemd = "0.1"
bech32 = "0.9"
serde = { workspace = true }
hex = { workspace = true }
