[package]
name = "qc-node"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros","json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread","macros","signal"] }
sha2 = "0.10"
hex = "0.4"
thiserror = "1"
parking_lot = "0.12"
time = "0.3"
rand = "0.8"

[bin]
name = "qc-node"
path = "src/bin/qc-node.rs"
