[package]
name = "qc-node"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "qc-node"
path = "src/main.rs"

[dependencies]
qc-types = { path = "../types" }
qc-validation = { path = "../validation" }
qc-crypto = { path = "../crypto" }

tokio = { workspace = true }
axum = "0.7"
hyper = { version = "1", features = ["server", "http1"] }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
rocksdb = "0.21"
anyhow = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
parking_lot = "0.12"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = "0.8"
bytes = "1"
rand = "0.8"
futures = "0.3"
