[package]
name = "quantumcoin-p2p"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Async and networking
tokio = { workspace = true, features = ["full"] }
futures = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Crypto
blake3 = { workspace = true }
rand = { workspace = true }

# Time
chrono = { workspace = true }

# Collections and utilities
dashmap = "5.5"
lru = "0.12"
priority-queue = "1.3"

# Network utilities
dns-lookup = "2.0"
socket2 = "0.5"

[dev-dependencies]
tempfile = "3.8"
test-log = "0.2"
