[package]
name = "quantumcoin-p2p"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Async and networking
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
tokio-util = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Crypto
blake3 = { workspace = true }
rand = { workspace = true }

# Time
chrono = { workspace = true }

# Collections and utilities
dashmap = { workspace = true }
lru = { workspace = true }
priority-queue = { workspace = true }

# Network utilities
dns-lookup = { workspace = true }
socket2 = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
test-log = "0.2"
