[package]
name = "quantumcoin-p2p"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Async and networking
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
anyhow = "1"
thiserror = "1.0"

# Logging
tracing = "0.1"

# Crypto
blake3 = "1.5"
rand = "0.8.5"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Collections and utilities
dashmap = "5.5"
lru = "0.12"
priority-queue = "1.3"

# Network utilities
dns-lookup = "2.0"
socket2 = "0.5"

[dev-dependencies]
tempfile = "3.8"
test-log = "0.2"
