[package]
name = "qc-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
hex = { workspace = true }
bech32 = "0.9"
sha2 = { workspace = true }
thiserror = { workspace = true }
