[package]
name = "quantumcoin-validation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Cryptography
pqcrypto-dilithium = "0.3.3"
pqcrypto-traits = "0.3.5"
blake3 = "1.5"
sha2 = "0.10"
rand = "0.8.5"

# Error handling
anyhow = "1"
thiserror = "1.0"

# Logging
tracing = "0.1"

# Concurrency
parking_lot = "0.12"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"
test-log = "0.2"

[[bench]]
name = "validation_bench"
harness = false
